--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/logo-dark.png" />
+    <link rel="icon" type="image/svg+xml" href="/logo-dark.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Find your dream job with Jobbers, the leading platform for job seekers and recruiters." />
+    <meta name="keywords" content="jobs, find jobs, job search, dream job, recruiters, job seekers" />
+    <meta property="og:title" content="Jobbers - Find Your Dream Job" />
+    <meta property="og:description" content="Connect with top employers and find your dream job today." />
+    <meta property="og:image" content="/logo-dark.png" />
+    <meta property="og:url" content="https://jobbers11.vercel.app" />
+    <meta name="twitter:card" content="summary_large_image" />
     <title>Jobbers | Find the your dream job</title>
   </head>
   <body>
